//
// Copyright 2023 The Chainloop Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package controlplane.v1;

option go_package = "github.com/chainloop-dev/chainloop/app/controlplane/api/controlplane/v1;v1";
import "validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "controlplane/v1/response_messages.proto";

service IntegrationsService {
	// Register a new integration in the organization
	rpc Register (IntegrationsServiceRegisterRequest) returns (IntegrationsServiceRegisterResponse);
	rpc List (IntegrationsServiceListRequest) returns (IntegrationsServiceListResponse);
	rpc Delete (IntegrationsServiceDeleteRequest) returns (IntegrationsServiceDeleteResponse);

	// Workflow Related operations
	// Attach an integration to a workflow
	rpc Attach (IntegrationsServiceAttachRequest) returns (IntegrationsServiceAttachResponse);
	// Detach integration from a workflow
	rpc Detach (IntegrationsServiceDetachRequest) returns (IntegrationsServiceDetachResponse);
	rpc ListAttachments (ListAttachmentsRequest) returns (ListAttachmentsResponse);
}

message IntegrationsServiceRegisterRequest {
	// Kind of integration to register
	// This should match the ID of an existing integration
	string kind = 1 [(validate.rules).string.min_len = 1];
	// Description of the registration, used for display purposes
	string display_name = 3;
	// Associated registration configuration
	google.protobuf.Any registration_config = 2 [(validate.rules).any.required = true];
}

message IntegrationsServiceRegisterResponse {
	IntegrationItem result = 1;
}

message IntegrationsServiceAttachRequest{
  string workflow_id = 1 [(validate.rules).string.uuid = true];
  string integration_id = 2 [(validate.rules).string.uuid = true];
  google.protobuf.Any attachment_config = 3 [(validate.rules).any.required = true];
}

message IntegrationsServiceAttachResponse{
	IntegrationAttachmentItem result = 1;
}


message IntegrationsServiceListRequest{}
message IntegrationsServiceListResponse{
	repeated IntegrationItem result = 1;
}

message IntegrationsServiceDetachRequest{
  string id = 1 [(validate.rules).string.uuid = true];
}

message IntegrationsServiceDetachResponse {}

message ListAttachmentsRequest{
  // Filter by workflow
  string workflow_id = 1;
}

message ListAttachmentsResponse{
	repeated IntegrationAttachmentItem result = 1;
}

message IntegrationItem {
	string id = 1;
	string kind = 2;
	// Description of the registration, used for display purposes
	string display_name = 4;
	google.protobuf.Timestamp created_at = 3;
	// Arbitrary configuration for the integration
	bytes config = 5;
}

message IntegrationAttachmentItem {
	string id = 1;
	google.protobuf.Timestamp created_at = 2;
	// Arbitrary configuration for the attachment
	bytes config = 3;
	IntegrationItem integration = 4;
	WorkflowItem workflow = 5;
}

message IntegrationsServiceDeleteRequest {
  string id = 1 [(validate.rules).string.uuid = true];
}

message IntegrationsServiceDeleteResponse {}